@@ -35,7 +35,9 @@ namespace GD
 		NOTEXT    = BIT(19),
 		BOLDKEY   = BIT(20),
 		BOLDVALUE = BIT(21),
-		ALIGN     = LEFT | RIGHT | TOP | BOTTOM	| VCENTER | HCENTER
+		HALIGN    = LEFT | RIGHT | HCENTER,
+		VALIGN    = TOP | BOTTOM | VCENTER,
+		ALIGN     = HALIGN | VALIGN
 	};
 }
 
